Source/WebCore/accessibility/AccessibilityObject.h
@@ -561,6 +561,7 @@ public:
     bool isSubscriptStyleGroup() const;
     bool isSuperscriptStyleGroup() const;
     bool isFigure() const;
+    bool isSummary() const { return roleValue() == SummaryRole; }
     
     virtual bool isChecked() const { return false; }
     virtual bool isEnabled() const { return false; }
@@ -1061,6 +1062,8 @@ public:
     AccessibilityObject* focusableAncestor();
     AccessibilityObject* editableAncestor();
     AccessibilityObject* highestEditableAncestor();
+    
+    static const AccessibilityObject* matchedParent(const AccessibilityObject&, bool includeSelf, const std::function<bool(const AccessibilityObject&)>&);
     
 protected:
     AXID m_id;
